[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modflowapi"
dynamic = ["version"]
authors = [
    {name = "Joseph D. Hughes", email = "jdhughes@usgs.gov"},
    {name = "Martijn Russcher", email = "Martijn.Russcher@deltares.nl"},
    {name = "Christian D. Langevin", email = "langevin@usgs.gov"},
    {name = "Julian Hofer", email = "Julian.Hofer@deltares.nl"},
    {name = "Joshua D. Larsen", email = "jlarsen@usgs.gov"},
]
maintainers = [
    {name = "Joseph D. Hughes", email = "jdhughes@usgs.gov"},
]
description = "modflowapi is an extension to the xmipy Python package"
readme = "README.md"
keywords = ["MODFLOW", "groundwater", "hydrogeology", "bmi", "xmi"]
license = {text = "CC0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "xmipy",
]

[project.optional-dependencies]
dev = ["modflowapi[test,lint]"]
test = [
    "filelock",
    "modflow-devtools>=1.7.0",
    "pytest!=8.1.0",
    "pytest-order",
    "pytest-xdist",
    "GitPython",
    "pooch",
    "scipy",
    "pyshp",
    "shapely",
    "rasterio",
    "rasterstats"
]
lint = [
    "codespell[toml] >=2.2.2",
    "ruff",
]
docs = [
    "modflowapi[test]",
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "jupyter",
    "jupytext",
    "nbsphinx",
    "ipython",
    "flopy",
]

[project.urls]
Repository = "https://github.com/MODFLOW-ORG/modflowapi"
Publication = "https://doi.org/10.1016/j.envsoft.2021.105257"

[tool.hatch.build.targets.sdist]
only-include = ["modflowapi"]

[tool.hatch.build.targets.wheel]
packages = ["modflowapi"]

[tool.hatch.version]
path = "modflowapi/version.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "I001"]
ignore = [
    "F841" # local variable assigned but never used
]

[tool.codespell]
skip = "cliff.toml,*.grb"
ignore-words-list = [
    "delt",
    "wel",
    "nam",
    "ist",
]
